Add draft categorical transformers and pipelines

--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -727,19 +727,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import OneHotEncoder\n",
-    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.pipeline import Pipeline, FeatureUnion\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.impute import SimpleImputer\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -989,14 +989,14 @@
        "[38312 rows x 14 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "bin_transformer = Pipeline(steps=[('imputer', SimpleImputer(strategy='constant', fill_value='unknown')),\n",
-    "                                  ('one-hot', OneHotEncoder(handle_unknown='ignore'))\n",
+    "                                  ('one-hot-encoder', OneHotEncoder(handle_unknown='ignore'))\n",
     "                                 ]\n",
     "                          )\n",
     "\n",
@@ -1006,7 +1006,7 @@
     "    ]\n",
     ")\n",
     "\n",
-    "clf = Pipeline(\n",
+    "full_pipeline = Pipeline(\n",
     "    steps=[\n",
     "        ('preprocessor', preprocessor)\n",
     "    ]\n",
@@ -1018,355 +1018,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Gender_Female</th>\n",
-       "      <th>Gender_Male</th>\n",
-       "      <th>Channel_of_Recruitment_Agency and others</th>\n",
-       "      <th>Channel_of_Recruitment_Direct Internal process</th>\n",
-       "      <th>Channel_of_Recruitment_Referral and Special candidates</th>\n",
-       "      <th>Foreign_schooled_No</th>\n",
-       "      <th>Foreign_schooled_Yes</th>\n",
-       "      <th>Marital_Status_Married</th>\n",
-       "      <th>Marital_Status_Not_Sure</th>\n",
-       "      <th>Marital_Status_Single</th>\n",
-       "      <th>Past_Disciplinary_Action_No</th>\n",
-       "      <th>Past_Disciplinary_Action_Yes</th>\n",
-       "      <th>Previous_IntraDepartmental_Movement_No</th>\n",
-       "      <th>Previous_IntraDepartmental_Movement_Yes</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38307</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38308</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38309</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38310</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38311</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>38312 rows × 14 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Gender_Female  Gender_Male  Channel_of_Recruitment_Agency and others  \\\n",
-       "0                  1            0                                         0   \n",
-       "1                  0            1                                         1   \n",
-       "2                  0            1                                         0   \n",
-       "3                  0            1                                         1   \n",
-       "4                  0            1                                         0   \n",
-       "...              ...          ...                                       ...   \n",
-       "38307              1            0                                         0   \n",
-       "38308              1            0                                         1   \n",
-       "38309              0            1                                         1   \n",
-       "38310              0            1                                         0   \n",
-       "38311              0            1                                         1   \n",
-       "\n",
-       "       Channel_of_Recruitment_Direct Internal process  \\\n",
-       "0                                                   1   \n",
-       "1                                                   0   \n",
-       "2                                                   1   \n",
-       "3                                                   0   \n",
-       "4                                                   1   \n",
-       "...                                               ...   \n",
-       "38307                                               1   \n",
-       "38308                                               0   \n",
-       "38309                                               0   \n",
-       "38310                                               1   \n",
-       "38311                                               0   \n",
-       "\n",
-       "       Channel_of_Recruitment_Referral and Special candidates  \\\n",
-       "0                                                      0        \n",
-       "1                                                      0        \n",
-       "2                                                      0        \n",
-       "3                                                      0        \n",
-       "4                                                      0        \n",
-       "...                                                  ...        \n",
-       "38307                                                  0        \n",
-       "38308                                                  0        \n",
-       "38309                                                  0        \n",
-       "38310                                                  0        \n",
-       "38311                                                  0        \n",
-       "\n",
-       "       Foreign_schooled_No  Foreign_schooled_Yes  Marital_Status_Married  \\\n",
-       "0                        1                     0                       1   \n",
-       "1                        0                     1                       1   \n",
-       "2                        0                     1                       1   \n",
-       "3                        0                     1                       0   \n",
-       "4                        0                     1                       1   \n",
-       "...                    ...                   ...                     ...   \n",
-       "38307                    0                     1                       1   \n",
-       "38308                    0                     1                       1   \n",
-       "38309                    1                     0                       1   \n",
-       "38310                    0                     1                       1   \n",
-       "38311                    0                     1                       0   \n",
-       "\n",
-       "       Marital_Status_Not_Sure  Marital_Status_Single  \\\n",
-       "0                            0                      0   \n",
-       "1                            0                      0   \n",
-       "2                            0                      0   \n",
-       "3                            0                      1   \n",
-       "4                            0                      0   \n",
-       "...                        ...                    ...   \n",
-       "38307                        0                      0   \n",
-       "38308                        0                      0   \n",
-       "38309                        0                      0   \n",
-       "38310                        0                      0   \n",
-       "38311                        0                      1   \n",
-       "\n",
-       "       Past_Disciplinary_Action_No  Past_Disciplinary_Action_Yes  \\\n",
-       "0                                1                             0   \n",
-       "1                                1                             0   \n",
-       "2                                1                             0   \n",
-       "3                                1                             0   \n",
-       "4                                1                             0   \n",
-       "...                            ...                           ...   \n",
-       "38307                            1                             0   \n",
-       "38308                            1                             0   \n",
-       "38309                            1                             0   \n",
-       "38310                            1                             0   \n",
-       "38311                            1                             0   \n",
-       "\n",
-       "       Previous_IntraDepartmental_Movement_No  \\\n",
-       "0                                           1   \n",
-       "1                                           1   \n",
-       "2                                           1   \n",
-       "3                                           1   \n",
-       "4                                           1   \n",
-       "...                                       ...   \n",
-       "38307                                       1   \n",
-       "38308                                       1   \n",
-       "38309                                       1   \n",
-       "38310                                       1   \n",
-       "38311                                       1   \n",
-       "\n",
-       "       Previous_IntraDepartmental_Movement_Yes  \n",
-       "0                                            0  \n",
-       "1                                            0  \n",
-       "2                                            0  \n",
-       "3                                            0  \n",
-       "4                                            0  \n",
-       "...                                        ...  \n",
-       "38307                                        0  \n",
-       "38308                                        0  \n",
-       "38309                                        0  \n",
-       "38310                                        0  \n",
-       "38311                                        0  \n",
-       "\n",
-       "[38312 rows x 14 columns]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "test2 = pd.get_dummies(df_train[binary_encoding_cols])\n",
-    "test2"
+    "# Feature selector\n",
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "\n",
+    "class FeatureSelector(BaseEstimator, TransformerMixin):\n",
+    "    \n",
+    "    def __init__(self, feature_names):\n",
+    "        self._feature_names = feature_names \n",
+    "    \n",
+    "    \n",
+    "    def fit(self, X, y = None ):\n",
+    "        return self \n",
+    "    \n",
+    "    \n",
+    "    def transform(self, X, y=None):\n",
+    "        return X[self._feature_names]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LabelTransformer(BaseEstimator, TransformerMixin):\n",
+    "    \n",
+    "    def __init__(self, mapping_dict):\n",
+    "        self.mapping_dict = mapping_dict \n",
+    "    \n",
+    "    \n",
+    "    def fit(self, X, y=None):\n",
+    "        return self \n",
+    "    \n",
+    "    \n",
+    "    def transform(self, X, y=None):\n",
+    "        return X.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NumericalTransformer(BaseEstimator, TransformerMixin):\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        pass \n",
+    "    \n",
+    "    \n",
+    "    def fit(self, X, y=None):\n",
+    "        return self \n",
+    "    \n",
+    "    \n",
+    "    def transform(self, X, y=None):\n",
+    "        return X.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bin_pipeline = Pipeline(steps=[('bin_enc_selector', FeatureSelector(binary_encoding_cols)),\n",
+    "                               ('imputer', SimpleImputer(strategy='constant', fill_value='unknown')),\n",
+    "                               ('one-hot-encoder', OneHotEncoder(handle_unknown='ignore'))\n",
+    "                              ]\n",
+    "                       )\n",
+    "cat_pipeline = Pipeline(steps=[('label_enc_selector', FeatureSelector(label_encoding_dict.keys())),\n",
+    "                               ('imputer', SimpleImputer(strategy='constant', fill_value='unknown')),\n",
+    "                               ('label-encoder', LabelTransformer(label_encoding_dict))\n",
+    "                              ]\n",
+    "                       )\n",
+    "\n",
+    "# num_pipeline = Pipeline(steps=[()\n",
+    "#                               ]\n",
+    "#                        )"
    ]
   },
   {
