--- a/experiment_path.ipynb
+++ b/experiment_path.ipynb
@@ -500,14 +500,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
        " 'Training_score_average']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,20 +756,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import OneHotEncoder\n",
-    "from sklearn.pipeline import Pipeline, FeatureUnion\n",
-    "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.pipeline import Pipeline\n",
     "from sklearn.base import BaseEstimator, TransformerMixin"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,13 +863,14 @@
     "        for col in self.mapping_dict.keys():\n",
     "            col_dict = self.mapping_dict[col]\n",
     "            #TODO: extend dictionary with unseen labels. Don't put them in one class -1\n",
-    "            X[col] = X[col].apply(lambda x: col_dict[x] if x in col_dict.keys() else -1)\n",
+    "            #X[col] = X[col].apply(lambda x: col_dict[x] if x in col_dict.keys() else -1)\n",
+    "            X[col] = X[col].map(col_dict)\n",
     "        return X"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -913,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1002,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1037,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1143,7 +1142,7 @@
        "[38312 rows x 2 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1155,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1261,7 +1260,7 @@
        "[38312 rows x 2 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1273,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1614,7 +1613,7 @@
        "[38312 rows x 14 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1626,7 +1625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1805,7 +1804,7 @@
        "[38312 rows x 7 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1817,7 +1816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1967,7 +1966,7 @@
        "max              38.000000  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1978,82 +1977,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from custom_transformers import CustomFeatureUnionToDataFrame, LogTransformer\n",
+    "from sklearn.pipeline import FeatureUnion"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class CustomFeatureUnionToDataFrame(BaseEstimator, TransformerMixin):\n",
-    "    \"\"\"\n",
-    "    Function that converts results of FeatureUnion transformer into DataFrame and restores column names\n",
-    "    of merged DataFrames (based on last step of each merged pipeline)\n",
-    "    \n",
-    "    Args:\n",
-    "        merged_pipelines: list of pipelines which results' were merged by FeatureUnion transformer\n",
-    "    Returns:\n",
-    "        pd.DataFrame\n",
-    "    \"\"\"\n",
-    "    def __init__(self, merged_pipelines):\n",
-    "        self.__pipelines = merged_pipelines\n",
-    "    \n",
-    "    \n",
-    "    def fit(self, X, y=None):\n",
-    "        self.__col_names = []\n",
-    "        for pipeline in self.__pipelines:\n",
-    "            for feature in pipeline[-1].get_feature_names():\n",
-    "                self.__col_names.append(feature)\n",
-    "        \n",
-    "        return self\n",
-    "    \n",
-    "    \n",
-    "    def transform(self, X, y=None):\n",
-    "        return pd.DataFrame(X, columns=self.__col_names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class LogTransformer(BaseEstimator, TransformerMixin):\n",
-    "    \"\"\"\n",
-    "    Custom log transformer for specified columns in DataFrame\n",
-    "    \n",
-    "    Args:\n",
-    "        features: list of features which has to be log-transformed (np.log)\n",
-    "    Returns:\n",
-    "        pd.DataFrame with transformed features (suffix: '_log') and dropped original values\n",
-    "    \"\"\"\n",
-    "    def __init__(self, features):\n",
-    "        self.__transform_features = features\n",
-    "        self.__aggregates = {}\n",
-    "    \n",
-    "    \n",
-    "    def fit(self, X, y=None):\n",
-    "        self.__features = X.columns.tolist()\n",
-    "        \n",
-    "        for feature in self.__transform_features:\n",
-    "            self.__aggregates[feature] = X[feature].min()\n",
-    "        return self\n",
-    "    \n",
-    "    \n",
-    "    def get_feature_names(self):\n",
-    "        return self.__features\n",
-    "        \n",
-    "    \n",
-    "    def transform(self, X, y=None):\n",
-    "        for feature in self.__transform_features:\n",
-    "            X[feature + '_log'] = X[feature].apply(lambda x: np.log(x - self.__aggregates[feature] + 1))\n",
-    "            X = X.drop(feature, axis=1)\n",
-    "            \n",
-    "        self.__features = X.columns.tolist()\n",
-    "        \n",
-    "        return X"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2078,7 +2012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2490,7 +2424,7 @@
        "[38312 rows x 25 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2503,16 +2437,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7ff91d2de940>"
+       "<seaborn.axisgrid.PairGrid at 0x7f9268ba0f60>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2545,7 +2479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2575,7 +2509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -3013,7 +2947,7 @@
        "[38312 rows x 25 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3027,16 +2961,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7ff91a88de80>"
+       "<seaborn.axisgrid.PairGrid at 0x7f9266c31048>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3059,7 +2993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -3497,7 +3431,7 @@
        "[7663 rows x 25 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3522,7 +3456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3536,15 +3470,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RandomForestClassifier(criterion='entropy', max_depth=50, max_features=5,\n",
-      "                       n_jobs=-1, random_state=42)\n"
+      "RandomForestClassifier(criterion='entropy', max_depth=40, max_features=5,\n",
+      "                       n_estimators=500, n_jobs=-1, random_state=42)\n"
      ]
     }
    ],
@@ -3563,10 +3497,10 @@
     "    'n_estimators': [50, 100, 200, 500],\n",
     "    'criterion': ['gini', 'entropy'],\n",
     "    'max_features': ['log2', int(math.sqrt(X_train.shape[1]))],\n",
-    "    'max_depth': [10, 20, 50]\n",
+    "    'max_depth': [10, 20, 30, 40]\n",
     "}\n",
     "\n",
-    "grid_clf = GridSearchCV(clf, grid_params, scoring='balanced_accuracy') #scoring='f1_micro'\n",
+    "grid_clf = GridSearchCV(clf, grid_params, scoring='f1_micro') #scoring='f1_micro'\n",
     "\n",
     "grid_clf.fit(X_train_res, y_train_res)\n",
     "\n",
@@ -3575,7 +3509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -3606,7 +3540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -3616,10 +3550,10 @@
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.93      0.99      0.96      6996\n",
-      "           1       0.77      0.24      0.37       667\n",
+      "           1       0.79      0.25      0.38       667\n",
       "\n",
       "    accuracy                           0.93      7663\n",
-      "   macro avg       0.85      0.62      0.66      7663\n",
+      "   macro avg       0.86      0.62      0.67      7663\n",
       "weighted avg       0.92      0.93      0.91      7663\n",
       "\n"
      ]
