--- a/experiment_path.ipynb
+++ b/experiment_path.ipynb
@@ -2443,7 +2443,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7f9268ba0f60>"
+       "<seaborn.axisgrid.PairGrid at 0x7feb5d8bacf8>"
       ]
      },
      "execution_count": 25,
@@ -2967,7 +2967,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7f9266c31048>"
+       "<seaborn.axisgrid.PairGrid at 0x7feb5b757b00>"
       ]
      },
      "execution_count": 28,
@@ -3463,7 +3463,7 @@
     "# Resample of train data set - deal with imbalanced classes of target-variable\n",
     "from imblearn.over_sampling import RandomOverSampler\n",
     "\n",
-    "ros = RandomOverSampler(sampling_strategy=0.2, random_state=42)\n",
+    "ros = RandomOverSampler(sampling_strategy=0.5, random_state=42)\n",
     "\n",
     "X_train_res, y_train_res = ros.fit_resample(X_train, y_train)"
    ]
@@ -3477,8 +3477,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RandomForestClassifier(criterion='entropy', max_depth=40, max_features=5,\n",
-      "                       n_estimators=500, n_jobs=-1, random_state=42)\n"
+      "RandomForestClassifier(max_depth=20, n_estimators=500, n_jobs=-1,\n",
+      "                       random_state=42)\n"
      ]
     }
    ],
@@ -3494,13 +3494,13 @@
     "clf = RandomForestClassifier(n_jobs=-1, random_state=42)\n",
     "\n",
     "grid_params = {\n",
-    "    'n_estimators': [50, 100, 200, 500],\n",
+    "    'n_estimators': [500, 1000, 1500],\n",
     "    'criterion': ['gini', 'entropy'],\n",
-    "    'max_features': ['log2', int(math.sqrt(X_train.shape[1]))],\n",
-    "    'max_depth': [10, 20, 30, 40]\n",
+    "    'max_features': ['auto', 'log2', int(math.sqrt(X_train.shape[1]))],\n",
+    "    'max_depth': [10, 15, 20]\n",
     "}\n",
     "\n",
-    "grid_clf = GridSearchCV(clf, grid_params, scoring='f1_micro') #scoring='f1_micro'\n",
+    "grid_clf = GridSearchCV(clf, grid_params, scoring='balanced_accuracy') #scoring='f1_micro'\n",
     "\n",
     "grid_clf.fit(X_train_res, y_train_res)\n",
     "\n",
@@ -3519,11 +3519,11 @@
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       1.00      1.00      1.00     28075\n",
-      "           1       1.00      1.00      1.00      5615\n",
+      "           1       1.00      0.99      0.99     14037\n",
       "\n",
-      "    accuracy                           1.00     33690\n",
-      "   macro avg       1.00      1.00      1.00     33690\n",
-      "weighted avg       1.00      1.00      1.00     33690\n",
+      "    accuracy                           1.00     42112\n",
+      "   macro avg       1.00      1.00      1.00     42112\n",
+      "weighted avg       1.00      1.00      1.00     42112\n",
       "\n"
      ]
     }
@@ -3549,12 +3549,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.93      0.99      0.96      6996\n",
-      "           1       0.79      0.25      0.38       667\n",
+      "           0       0.94      0.98      0.96      6996\n",
+      "           1       0.64      0.29      0.40       667\n",
       "\n",
-      "    accuracy                           0.93      7663\n",
-      "   macro avg       0.86      0.62      0.67      7663\n",
-      "weighted avg       0.92      0.93      0.91      7663\n",
+      "    accuracy                           0.92      7663\n",
+      "   macro avg       0.79      0.64      0.68      7663\n",
+      "weighted avg       0.91      0.92      0.91      7663\n",
       "\n"
      ]
     }
