--- a/experiment_path.ipynb
+++ b/experiment_path.ipynb
@@ -2443,7 +2443,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7feb5d8bacf8>"
+       "<seaborn.axisgrid.PairGrid at 0x7f8f588779e8>"
       ]
      },
      "execution_count": 25,
@@ -2967,7 +2967,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7feb5b757b00>"
+       "<seaborn.axisgrid.PairGrid at 0x7f8f567c59b0>"
       ]
      },
      "execution_count": 28,
@@ -3460,51 +3460,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Resample of train data set - deal with imbalanced classes of target-variable\n",
     "from imblearn.over_sampling import RandomOverSampler\n",
-    "\n",
-    "ros = RandomOverSampler(sampling_strategy=0.5, random_state=42)\n",
-    "\n",
-    "X_train_res, y_train_res = ros.fit_resample(X_train, y_train)"
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.metrics import f1_score\n",
+    "import math\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import classification_report"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RandomForestClassifier(max_depth=20, n_estimators=500, n_jobs=-1,\n",
-      "                       random_state=42)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Grid search using RandomForestClassifier\n",
+    "def grid_search(sampling_pc, grid_params):\n",
     "\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.metrics import f1_score\n",
-    "import math\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
+    "    # Resample of train data set - deal with imbalanced classes of target-variable\n",
+    "    ros = RandomOverSampler(sampling_strategy=sampling_pc, random_state=42)\n",
+    "    X_train_res, y_train_res = ros.fit_resample(X_train, y_train)\n",
     "\n",
+    "    # Grid search using RandomForestClassifier\n",
+    "    clf = RandomForestClassifier(n_jobs=-1, random_state=42)\n",
     "\n",
-    "clf = RandomForestClassifier(n_jobs=-1, random_state=42)\n",
+    "    grid_clf = GridSearchCV(clf, grid_params, scoring='f1_macro')\n",
+    "    grid_clf.fit(X_train_res, y_train_res)\n",
     "\n",
-    "grid_params = {\n",
-    "    'n_estimators': [500, 1000, 1500],\n",
-    "    'criterion': ['gini', 'entropy'],\n",
-    "    'max_features': ['auto', 'log2', int(math.sqrt(X_train.shape[1]))],\n",
-    "    'max_depth': [10, 15, 20]\n",
-    "}\n",
+    "    # Print results\n",
+    "    print('-' * 50)\n",
+    "    print('Sampling parameter:', sampling_pc)\n",
+    "    print('Best estimator:\\n', grid_clf.best_estimator_)\n",
+    "    print(grid_clf.best_estimator_.criterion)\n",
     "\n",
-    "grid_clf = GridSearchCV(clf, grid_params, scoring='balanced_accuracy') #scoring='f1_micro'\n",
+    "    # Classification metrics for Train dataset\n",
+    "    y_train_pred = grid_clf.best_estimator_.predict(X_train_res)\n",
     "\n",
-    "grid_clf.fit(X_train_res, y_train_res)\n",
-    "\n",
-    "print(grid_clf.best_estimator_)"
+    "    print(classification_report(y_train_res, y_train_pred))"
    ]
   },
   {
@@ -3516,26 +3507,94 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "--------------------------------------------------\n",
+      "Sampling parameter: 0.1\n",
+      "Best estimator:\n",
+      " RandomForestClassifier(criterion='entropy', max_depth=15, max_features=5,\n",
+      "                       n_estimators=1000, n_jobs=-1, random_state=42)\n",
+      "entropy\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      1.00      1.00     28075\n",
-      "           1       1.00      0.99      0.99     14037\n",
+      "           0       0.94      1.00      0.97     28075\n",
+      "           1       1.00      0.37      0.54      2807\n",
       "\n",
-      "    accuracy                           1.00     42112\n",
-      "   macro avg       1.00      1.00      1.00     42112\n",
-      "weighted avg       1.00      1.00      1.00     42112\n",
+      "    accuracy                           0.94     30882\n",
+      "   macro avg       0.97      0.68      0.75     30882\n",
+      "weighted avg       0.95      0.94      0.93     30882\n",
+      "\n",
+      "--------------------------------------------------\n",
+      "Sampling parameter: 0.2\n",
+      "Best estimator:\n",
+      " RandomForestClassifier(max_depth=15, max_features=5, n_estimators=1000,\n",
+      "                       n_jobs=-1, random_state=42)\n",
+      "gini\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.92      1.00      0.96     28075\n",
+      "           1       1.00      0.58      0.73      5615\n",
+      "\n",
+      "    accuracy                           0.93     33690\n",
+      "   macro avg       0.96      0.79      0.85     33690\n",
+      "weighted avg       0.94      0.93      0.92     33690\n",
+      "\n",
+      "--------------------------------------------------\n",
+      "Sampling parameter: 0.30000000000000004\n",
+      "Best estimator:\n",
+      " RandomForestClassifier(max_depth=15, max_features=5, n_estimators=1000,\n",
+      "                       n_jobs=-1, random_state=42)\n",
+      "gini\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.92      1.00      0.96     28075\n",
+      "           1       1.00      0.72      0.83      8422\n",
+      "\n",
+      "    accuracy                           0.93     36497\n",
+      "   macro avg       0.96      0.86      0.90     36497\n",
+      "weighted avg       0.94      0.93      0.93     36497\n",
+      "\n",
+      "--------------------------------------------------\n",
+      "Sampling parameter: 0.4\n",
+      "Best estimator:\n",
+      " RandomForestClassifier(max_depth=15, max_features=5, n_estimators=1000,\n",
+      "                       n_jobs=-1, random_state=42)\n",
+      "gini\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.94      1.00      0.97     28075\n",
+      "           1       0.99      0.85      0.91     11230\n",
+      "\n",
+      "    accuracy                           0.95     39305\n",
+      "   macro avg       0.97      0.92      0.94     39305\n",
+      "weighted avg       0.96      0.95      0.95     39305\n",
+      "\n",
+      "--------------------------------------------------\n",
+      "Sampling parameter: 0.5\n",
+      "Best estimator:\n",
+      " RandomForestClassifier(max_depth=15, max_features=5, n_estimators=1000,\n",
+      "                       n_jobs=-1, random_state=42)\n",
+      "gini\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.96      0.99      0.97     28075\n",
+      "           1       0.97      0.92      0.95     14037\n",
+      "\n",
+      "    accuracy                           0.96     42112\n",
+      "   macro avg       0.97      0.95      0.96     42112\n",
+      "weighted avg       0.96      0.96      0.96     42112\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# Classification metrics for Train dataset\n",
+    "grid_params = {\n",
+    "    'n_estimators': [500, 1000, 1500],\n",
+    "    'criterion': ['gini', 'entropy'],\n",
+    "    'max_features': ['log2', int(math.sqrt(X_train.shape[1]))],\n",
+    "    'max_depth': [10, 15]\n",
+    "}\n",
     "\n",
-    "from sklearn.metrics import classification_report\n",
-    "\n",
-    "y_train_pred = grid_clf.best_estimator_.predict(X_train_res)\n",
-    "\n",
-    "print(classification_report(y_train_res, y_train_pred))"
+    "for sampling_pc in np.arange(0.1, 0.6, 0.1):\n",
+    "    grid_search(sampling_pc, grid_params)"
    ]
   },
   {
@@ -3544,30 +3603,66 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(criterion='entropy', max_depth=15, max_features=5,\n",
+       "                       n_estimators=1000, n_jobs=-1, random_state=42)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Fit best estimator on whole train dataset\n",
+    "ros = RandomOverSampler(sampling_strategy=0.5, random_state=42)\n",
+    "X_train_res, y_train_res = ros.fit_resample(X_train, y_train)\n",
+    "\n",
+    "clf_best = RandomForestClassifier(n_jobs=-1, \n",
+    "                                  random_state=42,\n",
+    "                                  n_estimators=1000,\n",
+    "                                  criterion='entropy',\n",
+    "                                  max_features=5,\n",
+    "                                  max_depth=15\n",
+    "                                 )\n",
+    "clf_best.fit(X_train_res, y_train_res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.94      0.98      0.96      6996\n",
-      "           1       0.64      0.29      0.40       667\n",
+      "           0       0.94      0.97      0.95      6996\n",
+      "           1       0.50      0.36      0.42       667\n",
       "\n",
-      "    accuracy                           0.92      7663\n",
-      "   macro avg       0.79      0.64      0.68      7663\n",
-      "weighted avg       0.91      0.92      0.91      7663\n",
+      "    accuracy                           0.91      7663\n",
+      "   macro avg       0.72      0.66      0.68      7663\n",
+      "weighted avg       0.90      0.91      0.91      7663\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Classification metrics for Test dataset\n",
-    "\n",
-    "from sklearn.metrics import classification_report\n",
-    "\n",
-    "y_test_pred = grid_clf.best_estimator_.predict(X_test)\n",
+    "y_test_pred = clf_best.predict(X_test)\n",
     "\n",
     "print(classification_report(y_test, y_test_pred))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
