--- a/experiment_path.ipynb
+++ b/experiment_path.ipynb
@@ -2008,7 +2008,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7f27194b77f0>"
+       "<seaborn.axisgrid.PairGrid at 0x7fade2765cc0>"
       ]
      },
      "execution_count": 18,
@@ -2536,7 +2536,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7f2717c365f8>"
+       "<seaborn.axisgrid.PairGrid at 0x7fade2b44780>"
       ]
      },
      "execution_count": 21,
@@ -3031,9 +3031,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def grid_search(sampling_pc, grid_params):\n",
+    "reports = dict()\n",
+    "results = []\n",
+    "grids = []\n",
     "\n",
-    "    results = dict()\n",
+    "def grid_search(sampling_pc, grid_params):\n",
     "    \n",
     "    # Resample of train data set - deal with imbalanced classes of target-variable\n",
     "    ros = RandomOverSampler(sampling_strategy=sampling_pc, random_state=RANDOM_STATE)\n",
@@ -3044,18 +3046,19 @@
     "\n",
     "    grid_clf = GridSearchCV(clf, grid_params, scoring='f1_macro')\n",
     "    grid_clf.fit(X_train_res, y_train_res)\n",
+    "    results.append(grid_clf.cv_results_)\n",
+    "    grids.append(grid_clf)\n",
     "\n",
     "    # Print results\n",
     "    print('-' * 50)\n",
     "    print('Sampling parameter: {}'.format(sampling_pc))\n",
     "    print('Best estimator:\\n{}'.format(grid_clf.best_estimator_))\n",
     "    print(grid_clf.best_estimator_.criterion)\n",
-    "    print(grid_clf.cv_results_)\n",
     "\n",
     "    # Classification metrics for Train dataset\n",
     "    y_train_pred = grid_clf.best_estimator_.predict(X_train_res)\n",
     "\n",
-    "    results[round(sampling_pc, 2)] = classification_report(y_train_res, y_train_pred)\n",
+    "    reports[round(sampling_pc, 2)] = classification_report(y_train_res, y_train_pred)\n",
     "    print(classification_report(y_train_res, y_train_pred))"
    ]
   },
@@ -3069,52 +3072,121 @@
      "output_type": "stream",
      "text": [
       "--------------------------------------------------\n",
+      "Sampling parameter: 0.1\n",
+      "Best estimator:\n",
+      "RandomForestClassifier(criterion='entropy', max_depth=15, max_features=5,\n",
+      "                       n_estimators=1250, n_jobs=-1, random_state=42)\n",
+      "entropy\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.94      1.00      0.97     28075\n",
+      "           1       1.00      0.37      0.54      2807\n",
+      "\n",
+      "    accuracy                           0.94     30882\n",
+      "   macro avg       0.97      0.68      0.75     30882\n",
+      "weighted avg       0.95      0.94      0.93     30882\n",
+      "\n",
+      "--------------------------------------------------\n",
       "Sampling parameter: 0.2\n",
       "Best estimator:\n",
-      "RandomForestClassifier(criterion='entropy', max_depth=50, max_features=5,\n",
-      "                       n_estimators=500, n_jobs=-1, random_state=42)\n",
-      "entropy\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'GridSearchCV' object has no attribute 'cv_scores_'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-24-74b212bcbcba>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0msampling_pc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mgrid_search\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msampling_pc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrid_params\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-23-6e7e0b8886ad>\u001b[0m in \u001b[0;36mgrid_search\u001b[0;34m(sampling_pc, grid_params)\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Best estimator:\\n{}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgrid_clf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbest_estimator_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgrid_clf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbest_estimator_\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcriterion\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgrid_clf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcv_scores_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0;31m# Classification metrics for Train dataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'GridSearchCV' object has no attribute 'cv_scores_'"
+      "RandomForestClassifier(max_depth=15, max_features=5, n_estimators=1000,\n",
+      "                       n_jobs=-1, random_state=42)\n",
+      "gini\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.92      1.00      0.96     28075\n",
+      "           1       1.00      0.58      0.73      5615\n",
+      "\n",
+      "    accuracy                           0.93     33690\n",
+      "   macro avg       0.96      0.79      0.85     33690\n",
+      "weighted avg       0.94      0.93      0.92     33690\n",
+      "\n",
+      "--------------------------------------------------\n",
+      "Sampling parameter: 0.30000000000000004\n",
+      "Best estimator:\n",
+      "RandomForestClassifier(max_depth=15, max_features=5, n_estimators=1000,\n",
+      "                       n_jobs=-1, random_state=42)\n",
+      "gini\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.92      1.00      0.96     28075\n",
+      "           1       1.00      0.72      0.83      8422\n",
+      "\n",
+      "    accuracy                           0.93     36497\n",
+      "   macro avg       0.96      0.86      0.90     36497\n",
+      "weighted avg       0.94      0.93      0.93     36497\n",
+      "\n",
+      "--------------------------------------------------\n",
+      "Sampling parameter: 0.4\n",
+      "Best estimator:\n",
+      "RandomForestClassifier(max_depth=15, max_features=5, n_estimators=1000,\n",
+      "                       n_jobs=-1, random_state=42)\n",
+      "gini\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.94      1.00      0.97     28075\n",
+      "           1       0.99      0.85      0.91     11230\n",
+      "\n",
+      "    accuracy                           0.95     39305\n",
+      "   macro avg       0.97      0.92      0.94     39305\n",
+      "weighted avg       0.96      0.95      0.95     39305\n",
+      "\n",
+      "--------------------------------------------------\n",
+      "Sampling parameter: 0.5\n",
+      "Best estimator:\n",
+      "RandomForestClassifier(max_depth=15, max_features=5, n_estimators=1000,\n",
+      "                       n_jobs=-1, random_state=42)\n",
+      "gini\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.96      0.99      0.97     28075\n",
+      "           1       0.97      0.92      0.95     14037\n",
+      "\n",
+      "    accuracy                           0.96     42112\n",
+      "   macro avg       0.97      0.95      0.96     42112\n",
+      "weighted avg       0.96      0.96      0.96     42112\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "grid_params = {\n",
-    "    'n_estimators': range(500, 1501, 500),\n",
+    "    'n_estimators': range(250, 1251, 250),\n",
     "    'criterion': ['gini', 'entropy'],\n",
     "    'max_features': ['log2', int(math.sqrt(X_train.shape[1]))],\n",
-    "    'max_depth': range(10, 51, 20)\n",
+    "    'max_depth': [10, 12, 15]\n",
     "}\n",
     "\n",
-    "for sampling_pc in np.arange(0.2, 0.6, 0.1):\n",
+    "for sampling_pc in np.arange(0.1, 0.6, 0.1):\n",
     "    grid_search(sampling_pc, grid_params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(max_depth=15, max_features=5, n_estimators=1000,\n",
+       "                       n_jobs=-1, random_state=42)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Fit best estimator on whole train dataset\n",
-    "ros = RandomOverSampler(sampling_strategy=0.5, random_state=RANDOM_STATE)\n",
+    "ros = RandomOverSampler(sampling_strategy=0.3, random_state=RANDOM_STATE)\n",
     "X_train_res, y_train_res = ros.fit_resample(X_train, y_train)\n",
     "\n",
     "clf_best = RandomForestClassifier(n_jobs=-1, \n",
     "                                  random_state=RANDOM_STATE,\n",
     "                                  n_estimators=1000,\n",
-    "                                  criterion='entropy',\n",
+    "                                  criterion='gini',\n",
     "                                  max_features=5,\n",
     "                                  max_depth=15\n",
     "                                 )\n",
@@ -3123,22 +3195,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.93      0.99      0.96      6996\n",
+      "           1       0.75      0.25      0.37       667\n",
+      "\n",
+      "    accuracy                           0.93      7663\n",
+      "   macro avg       0.84      0.62      0.67      7663\n",
+      "weighted avg       0.92      0.93      0.91      7663\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Classification metrics for Test dataset\n",
     "y_test_pred = clf_best.predict(X_test)\n",
     "\n",
     "print(classification_report(y_test, y_test_pred))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "params\n",
+      "{'criterion': 'gini', 'max_depth': 15, 'max_features': 5, 'n_estimators': 1000}\n",
+      "\n",
+      "\n",
+      "mean_fit_time\n",
+      "3.5825263023376466\n",
+      "\n",
+      "split0_test_score\n",
+      "0.8500689862526981\n",
+      "\n",
+      "split1_test_score\n",
+      "0.8409512850019178\n",
+      "\n",
+      "split2_test_score\n",
+      "0.8649508922362412\n",
+      "\n",
+      "split3_test_score\n",
+      "0.8660458767335265\n",
+      "\n",
+      "split4_test_score\n",
+      "0.8718463081963543\n",
+      "\n",
+      "\n",
+      "mean_test_score\n",
+      "0.8587726696841476\n",
+      "\n",
+      "\n",
+      "std_test_score\n",
+      "0.011448544500512631\n"
+     ]
+    }
+   ],
+   "source": [
+    "cv_folds = 5\n",
+    "best_sampling_id = 2\n",
+    "best_clf_id = results[best_sampling_id]['rank_test_score'].argmin()\n",
+    "\n",
+    "for key in ['params', 'mean_fit_time', 'split_test_score', 'mean_test_score', 'std_test_score']:\n",
+    "    if key == 'split_test_score':\n",
+    "        for idx in range(cv_folds):\n",
+    "            key = f'split{idx}_test_score'\n",
+    "            print(f'\\n{key}')\n",
+    "            print(results[best_sampling_id][key][best_clf_id])\n",
+    "    else:\n",
+    "        print(f'\\n\\n{key}')\n",
+    "        print(results[best_sampling_id][key][best_clf_id])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:dsr]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-dsr-py"
   },
   "language_info": {
    "codemirror_mode": {
